external-crates/move/crates/move-compiler/tests/move_check/typing/borrow_divergent.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/borrow_divergent.move:4:12
  │
4 │            &break;
  │            ^^^^^^
  │            ││
  │            │Could not find a concrete type for this expression
  │            Invalid borrow

error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/borrow_divergent.move:9:9
  │
9 │         &{ return };
  │         ^^^^^^^^^^^
  │         │  │
  │         │  Could not find a concrete type for this expression
  │         Invalid borrow

error[E04004]: expected a single non-reference type
   ┌─ tests/move_check/typing/borrow_divergent.move:13:9
   │
13 │         &(if (cond) return else return);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │           │
   │         │           Could not find a concrete type for this expression
   │         Invalid borrow
